Redo structure of reaper-api module

--- a/reaper-api/justfile
+++ b/reaper-api/justfile
@@ -5,3 +5,48 @@ watch:
 
 build:
     bun "{{tstl}}"
+
+# Manually copy some files to dist
+# Written by ChatGPT
+copy-files:
+    #!bash
+
+    # == Copy package.json
+
+    cp -f package.json dist/package.json
+
+    echo "package.json has been copied successfully."
+
+    # == Copy declaration files
+
+    # Define the source and destination directories
+    SRC_DIR="src"
+    DST_DIR="dist"
+
+    # Find all .d.ts files in the source directory
+    find "$SRC_DIR" -name '*.d.ts' | while read -r FILE; do
+        # Determine the relative path of the file
+        REL_PATH="${FILE#$SRC_DIR/}"
+
+        # Determine the destination directory
+        DST_PATH="$DST_DIR/$REL_PATH"
+
+        # Create the destination directory if it doesn't exist
+        mkdir -p "$(dirname "$DST_PATH")"
+
+        # Copy the file to the destination directory
+        cp -f "$FILE" "$DST_PATH"
+    done
+
+    echo "All .d.ts files have been copied successfully."
+
+    # == Copy plugin/ dir
+
+    # Define the source and destination directories
+    SRC_DIR="plugins"
+    DST_DIR="dist/plugins"
+
+    # Copy the source directory to the destination directory
+    cp -rf "$SRC_DIR" "$DST_DIR"
+
+    echo "The plugins directory has been copied successfully."
