--- a/lib/reaper-api/package.json
+++ b/lib/reaper-api/package.json
@@ -11,6 +11,6 @@
     "typescript-to-lua": "^1.26.0",
     "typescript": "5.5.2",
     "lua-types": "^2.13.1",
-    "json": "link:json"
+    "json": "link:json.lua"
   }
 }
