--- a/reaper-replacefx/package.json
+++ b/reaper-replacefx/package.json
@@ -2,9 +2,10 @@
   "name": "reaper-replacefx",
   "module": "src/index.ts",
   "type": "module",
-  "dependencies": { "rpts-microui": "^0.3.0" },
+  "dependencies": {},
   "devDependencies": {
-    "json": "link:json",
+    "reaper-microui": "link:reaper-microui",
+    "json": "link:json.lua",
     "lua-types": "^2.13.1",
     "reaper-api": "link:reaper-api",
     "typescript": "^5.5.3",
