--- a/script-template/package.json
+++ b/script-template/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "dependencies": {},
   "devDependencies": {
-    "json": "link:json",
+    "json": "link:json.lua",
     "lua-types": "^2.13.1",
     "reaper-api": "link:reaper-api",
     "typescript": "^5.5.3",
