--- a/lib/reaper-api/justfile
+++ b/lib/reaper-api/justfile
@@ -47,7 +47,7 @@ copy-files:
 
     # Define the source and destination directories
     SRC_DIR="plugins"
-    DST_DIR="dist/plugins"
+    DST_DIR="dist/"
 
     # Copy the source directory to the destination directory
     cp -rf "$SRC_DIR" "$DST_DIR"
