--- a/track-names-edit/package.json
+++ b/track-names-edit/package.json
@@ -7,7 +7,7 @@
     "json": "link:json.lua",
     "lua-types": "^2.13.1",
     "reaper-api": "link:reaper-api",
-    "typescript": "^5.5.3",
-    "typescript-to-lua": "^1.26.0"
+    "typescript": "5.6.2",
+    "typescript-to-lua": "^1.27.0"
   }
 }
