New script to create menus

--- a/plain-text-menu/package.json
+++ b/plain-text-menu/package.json
@@ -2,7 +2,9 @@
   "name": "plain-text-menu",
   "module": "src/index.ts",
   "type": "module",
-  "dependencies": {},
+  "dependencies": {
+    "reaper-microui": "link:reaper-microui"
+  },
   "devDependencies": {
     "json": "link:json.lua",
     "lua-types": "^2.13.1",
