--- a/plain-text-menu/justfile
+++ b/plain-text-menu/justfile
@@ -3,5 +3,9 @@ tstl := "node_modules/typescript-to-lua/dist/tstl.js"
 watch:
     bun "{{tstl}}" --watch
 
+watch-script:
+    bun "{{tstl}}" --watch -p tsconfig.script.json
+
 build:
     bun "{{tstl}}"
+    bun "{{tstl}}" -p tsconfig.script.json
