--- a/80gray-theme-adjuster/package.json
+++ b/80gray-theme-adjuster/package.json
@@ -7,7 +7,8 @@
     "json": "link:json.lua",
     "lua-types": "^2.13.1",
     "reaper-api": "link:reaper-api",
-    "typescript": "5.6.2",
-    "typescript-to-lua": "^1.27.0"
+    "reaper-microui": "link:reaper-microui",
+    "typescript": "5.7.2",
+    "typescript-to-lua": "^1.28.0"
   }
 }
