--- a/script-template/tsconfig.json
+++ b/script-template/tsconfig.json
@@ -21,6 +21,9 @@
     "strict": true
   },
   "tstl": {
+    // Uncomment to bundle into one file
+    // "luaBundle": "Output Script.lua",
+    // "luaBundleEntry": "src/index.ts",
     "luaPlugins": [{ "name": "reaper-api/plugins/importFixPlugin.js" }],
     "luaTarget": "5.4",
     "luaLibImport": "require-minimal",
