--- a/fx-modulation-helper/tsconfig.json
+++ b/fx-modulation-helper/tsconfig.json
@@ -22,9 +22,9 @@
   },
   "tstl": {
     // Uncomment to bundle into one file
-    "luaBundle": "FX Modulation Helper.lua",
-    "luaBundleEntry": "src/index.ts",
-    // "luaPlugins": [{ "name": "reaper-api/plugins/importFixPlugin.js" }],
+    // "luaBundle": "FX Modulation Helper.lua",
+    // "luaBundleEntry": "src/index.ts",
+    "luaPlugins": [{ "name": "reaper-api/plugins/importFixPlugin.js" }],
     "luaTarget": "5.4",
     "luaLibImport": "require-minimal",
     "noImplicitGlobalVariables": true
