--- a/lib/reaper-api/package.json
+++ b/lib/reaper-api/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "typescript-to-lua": "^1.27.0",
-    "typescript": "5.6.2",
+    "json": "link:json.lua",
     "lua-types": "^2.13.1",
-    "json": "link:json.lua"
+    "typescript": "^5.7.3",
+    "typescript-to-lua": "^1.30.1"
   }
 }
