--- a/sample-palette/package.json
+++ b/sample-palette/package.json
@@ -9,7 +9,7 @@
     "json": "link:json.lua",
     "lua-types": "^2.13.1",
     "reaper-api": "link:reaper-api",
-    "typescript": "5.6.2",
-    "typescript-to-lua": "^1.27.0"
+    "typescript": "^5.7.3",
+    "typescript-to-lua": "^1.30.1"
   }
 }
