new justfile to build scripts to standalone| DOESN'T WORK, the output contains every ts script in the folder

--- a/script-dump/tsconfig.json
+++ b/script-dump/tsconfig.json
@@ -21,9 +21,10 @@
     "strict": true
   },
   "tstl": {
-    // Uncomment to bundle into one file
+    // Bundling is handled by justfile CLI arguments
     // "luaBundle": "Output Script.lua",
     // "luaBundleEntry": "src/index.ts",
+
     "luaPlugins": [{ "name": "reaper-api/plugins/importFixPlugin.js" }],
     "luaTarget": "5.4",
     "luaLibImport": "require-minimal",
