--- a/script-dump/justfile
+++ b/script-dump/justfile
@@ -1,10 +1,15 @@
 tstl := "node_modules/typescript-to-lua/dist/tstl.js"
 
-watch:
-    bun "{{tstl}}" --watch
+build-all:
+    #!bash
 
-build:
-    bun "{{tstl}}"
+    for file in src/*.ts; do
+        just build "$file"
+    done
 
-publish:
-    cd .. && just publish YOUR_SCRIPT_NAME YOUR_SCRIPT_NAME/dist
+
+watch path:
+    bun "{{tstl}}" --luaBundleEntry "{{path}}" --luaBundle "{{file_stem(path)}}.lua" --watch
+
+build path:
+    bun "{{tstl}}" --luaBundleEntry "{{path}}" --luaBundle "{{file_stem(path)}}.lua"
