--- a/fx-modulation-helper/package.json
+++ b/fx-modulation-helper/package.json
@@ -7,7 +7,7 @@
     "json": "link:json.lua",
     "lua-types": "^2.13.1",
     "reaper-api": "link:reaper-api",
-    "typescript": "5.6.2",
-    "typescript-to-lua": "^1.28.1"
+    "typescript": "^5.9.3",
+    "typescript-to-lua": "^1.33.0"
   }
 }
